// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FieldDetailsComponent renders correctly 1`] = `
<div
  class="field-details"
>
  <div>
    <span
      class="sc-kEqXSa sc-iqAclL kbXjKX fIBWK"
    >
      test type prefix
    </span>
    <span
      class="sc-kEqXSa sc-crzoAE kbXjKX dPbcpi"
    >
      array
    </span>
    <span
      class="sc-kEqXSa sc-dIsUp kbXjKX jKcFhO"
    >
       (test title) 
    </span>
    <span
      class="field-constraints"
    >
       
      <span
        class="sc-kEqXSa sc-iemWCZ kbXjKX jirMag"
      >
          
      </span>
    </span>
  </div>
  <div>
    <span
      class="sc-kEqXSa kbXjKX"
    >
       Default: 
    </span>
     
    <span
      class="sc-kEqXSa sc-fFSPTT kbXjKX jxiCED field-example"
    >
      []
    </span>
  </div>
   
  <div>
    <span
      class="sc-kEqXSa kbXjKX"
    >
       Example: 
    </span>
     
    <span
      class="sc-kEqXSa sc-fFSPTT kbXjKX jxiCED field-example"
    >
      "example"
    </span>
  </div>
  <div>
    <div
      class="sc-iTVJFM sc-khIgEk KQjrk bwNvGY"
    >
      <p>
        test description
      </p>
      

    </div>
  </div>
</div>
`;

exports[`FieldDetailsComponent renders correctly when default value is object in request body 1`] = `
<div
  class="field-details"
>
  <div>
    <span
      class="sc-kEqXSa sc-iqAclL kbXjKX fIBWK"
    />
    <span
      class="sc-kEqXSa sc-crzoAE kbXjKX dPbcpi"
    >
      object
    </span>
    <span
      class="sc-kEqXSa sc-dIsUp kbXjKX jKcFhO"
    >
       (test title) 
    </span>
    <span
      class="field-constraints"
    >
       
      <span
        class="sc-kEqXSa sc-iemWCZ kbXjKX jirMag"
      >
          
      </span>
    </span>
  </div>
  <div>
    <span
      class="sc-kEqXSa kbXjKX"
    >
       Default: 
    </span>
     
    <span
      class="sc-kEqXSa sc-fFSPTT kbXjKX jxiCED field-example"
    >
      {"properties":{}}
    </span>
  </div>
   
  <div>
    <span
      class="sc-kEqXSa kbXjKX"
    >
       Example: 
    </span>
     
    <span
      class="sc-kEqXSa sc-fFSPTT kbXjKX jxiCED field-example"
    >
      "example"
    </span>
  </div>
  <div>
    <div
      class="sc-iTVJFM sc-khIgEk KQjrk bwNvGY"
    >
      <p>
        test description
      </p>
      

    </div>
  </div>
</div>
`;

exports[`FieldDetailsComponent renders correctly when field items have string type and pattern 1`] = `
<div
  class="field-details"
>
  <div>
    <span
      class="sc-kEqXSa sc-iqAclL kbXjKX fIBWK"
    />
    <span
      class="sc-kEqXSa sc-crzoAE kbXjKX dPbcpi"
    >
      Array of strings
    </span>
    <span
      class="sc-kEqXSa sc-dIsUp kbXjKX jKcFhO"
    >
       (test title) 
    </span>
    <span
      class="field-constraints"
    >
       
      <span
        class="sc-kEqXSa sc-iemWCZ kbXjKX jirMag"
      >
          
      </span>
    </span>
    <span
      class="sc-kEqXSa sc-iqAclL sc-iIgjPs kbXjKX fIBWK dZiNhe"
    >
      [
      <span
        class="sc-kEqXSa sc-fnVZcZ kbXjKX iaObLQ field-pattern"
      >
        ^see regex[0-9]$
      </span>
      ]
    </span>
  </div>
   
  <div>
    <span
      class="sc-kEqXSa kbXjKX"
    >
       Example: 
    </span>
     
    <span
      class="sc-kEqXSa sc-fFSPTT kbXjKX jxiCED field-example"
    >
      "example"
    </span>
  </div>
  <div>
    <div
      class="sc-iTVJFM sc-khIgEk KQjrk bwNvGY"
    >
      <p>
        test description
      </p>
      

    </div>
  </div>
</div>
`;
